# RAGmain

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: open-webui.md
integrations/: __init__.py
integrations/open_webui/: __init__.py  agentic_rag_pipe.py
scripts/: isabella  isabella-stop
src/agentic_rag/: __init__.py  __main__.py  api.py  app.py  cli.py  documents.py  errors.py  evaluation.py  graph.py  presentation.py  providers.py  retrieval.py  service.py  settings.py
tests/: test_api.py  test_app.py  test_cli.py  test_documents.py  test_evaluation.py  test_graph.py  test_open_webui_pipe.py  test_presentation.py  test_providers.py  test_retrieval.py  test_service.py  test_service_integration.py  test_settings.py
tests/eval/: baseline_dense.json  baseline_hybrid.json  corpus.json
