[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG project built with LangGraph and LangChain."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "langchain>=0.3.0,<1.0.0",
  "langchain-anthropic>=0.3.0,<1.0.0",
  "langchain-community>=0.3.0,<1.0.0",
  "langchain-google-genai>=2.0.0,<3.0.0",
  "langchain-litellm>=0.1.0,<1.0.0",
  "langchain-openai>=0.3.0,<1.0.0",
  "langchain-qdrant>=0.2.1,<1.0.0",
  "langchain-text-splitters>=0.3.0,<1.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "qdrant-client>=1.10.1,<2.0.0",
  "urllib3<2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
agentic-rag = "agentic_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src/agentic_rag"]
mypy_path = "src"
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
